# mastermind

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DESIGN.md  INSTALL.md  Makefile  README.md  TODO.md  config.h  config.h.in  fr.gmo
CMake/: CPack.Info.plist.in  FindClangformat.cmake  FindSDL2.cmake  Gettext.cmake  doxygen.cmake  iOS.cmake  mm_cpack.cmake  mm_docs.cmake  sdl2_android.cmake  toolchain-mingw-w64.cmake
colorscheme/: 4bit.h  jellybeans.h  my_urxvt.h  rainbow_simple.h  rcg_term.h  solarized_dark.h  solarized_light.h
doc/: Doxyfile  c-standards.texi  config.md  dev_tools.texi  learn.md  mastermind.texi  mastermindcli.1  third_party_libs.texi
doc/presentation/: index.html
doc/presentation/css/: main.css
doc/presentation/js/: main.js
extra/: logo.icns  windows-installer.nsi
extra/android-project/: AndroidManifest.xml  build.xml
extra/android-project/jni/src/: Android.mk
extra/android-project/res/values/: strings.xml
extra/android-project/src/me/lejenome/mastermind/: MastermindSDL.java
ide/xcode-ios/: Info.plist
ide/xcode-ios/MastermindSDL.xcodeproj/: project.pbxproj
ide/xcode-ios/MastermindSDL.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ide/xcode-ios/MastermindSDL.xcodeproj/project.xcworkspace/xcshareddata/: MastermindSDL.xccheckout
ide/xcode-ios/MastermindSDL.xcodeproj/project.xcworkspace/xcuserdata/lejenome.xcuserdatad/: UserInterfaceState.xcuserstate
ide/xcode-ios/MastermindSDL.xcodeproj/xcuserdata/lejenome.xcuserdatad/xcschemes/: MastermindSDL.xcscheme  xcschememanagement.plist
ide/xcode-ios/___PROJECTNAME___.xcodeproj/: project.pbxproj
ide/xcode-ios/___PROJECTNAME___.xcodeproj/project.xcworkspace/xcshareddata/: ___PROJECTNAME___.xccheckout
ide/xcode-ios/___PROJECTNAME___.xcodeproj/project.xcworkspace/xcuserdata/lejenome.xcuserdatad/: UserInterfaceState.xcuserstate
ide/xcode-ios/___PROJECTNAME___.xcodeproj/xcuserdata/lejenome.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
po/: fr.po
res/: Mastermind.rb  PKGBUILD  Portfile  mastermindsdl.desktop.in  windows-installer.nsi
res/completion/: mastermindcli.bash  mastermindcli.zsh
res/icons/: icon-16x16.icon  icon-22x22.icon  logo.icns
scripts/: build-android.sh  gen-gource-video.sh  release.sh
src/: cli-cmd.c  cli-cmd.h  cli.c  core.c  core.h  lib.c  lib.h  sdl.c  util.c  util.h  xx
